style.css
/* ... */
.infectionStatus
{
	padding: 5px 0;
	text-align: center;
	background-color: #252525;
	border-bottom: 1px solid #fff;
	border-left: 1px solid #fff;
}
.infectionStatus p:first-of-type{font-size: 22px;}
.groupInfRate
{
	display: inline-block;
	width: 100%;
	margin: 8px 0;
	padding: 0;
}
.infectionCard
{
	width: 100%;
	margin-bottom: 5px;
}
#infectCitiesContainer > .infectionCard,
#infectCitiesContainer > .btnContinue
{ margin-top: 20px }
.infectionCardContents { position: relative }
.infectionCard *
{
	position: absolute;
	pointer-events: none;
}
.infectionCardImg
{
	width: 100%;
}
.cityName
{
	margin-left: 20%;
	color: #000;
	font-family: 'Audiowide', 'Electrolize', sans-serif;
	font-weight: 700;
}
.veil
{
	width: 89.52%;
	left: 10.48%;
	z-index: 5;
}
#infectionDiscardContainer .infectionCard
{
	display: block;
	padding-left: 1%;
	width: 100%;
	margin-top: 2px;
}
#infectionDiscardContainer .infectionCardContents { width: 100% }
#epidemicContainer > .epidemicFull
{
	width: 98%;
	overflow: hidden;
}
#boardContainer > .epidemicFull
{
	width: 180px;
	pointer-events: none;
}
#boardContainer > .epidemicFull > div
{ background: transparent }
.epidemicFull h2
{
	font-size: 16px;
	text-align: center;
	padding: 3px 0;
	border-bottom: 2px solid #fff;
}
.epidemicFull.pending h2 { border-bottom: none }
.epidemicFull > div
{
	padding: 6px 10px;
	background-color: #007034;
	transition: background-color 0.5s;
}
.epidemicFull > div.highlighted
{
	background-color: var(--epidemic-green);
	transition: background-color 0.5s;
}
.epidemicFull h3 { font-size: 14px }
.epidemicFull h3 > * { vertical-align: middle }
.epidemicFull h3 img
{
	width: 16px;
	margin-left: 8px;
}
#epidemicContainer .epidemicFull > div:not(.highlighted) h3
{
	color: rgb(189, 189, 189);
}
.epidemicFull p
{
	font-size: 10px;
	font-weight: 700;
	padding: 3px 0 0 12px;
	color: yellow;
}
#epidemicContainer .epidemicFull > div:not(.highlighted) p { color: rgb(172, 172, 1) }
#playerPanelContainer
{
	width: 44.3%;
}
.playerPanel
{
	vertical-align: top;
	margin-right: 0.75%;
	color: #fff;
	text-align: center;
	border: 1px solid #fff;
	border-top: none;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	background-color: #353535;
	overflow: hidden;
	position: relative;
	z-index: 6;
}
.playerPanel-2 { width: 49.1% }
.playerPanel-2 .role,
.playerPanel-3 .role
{ font-size: 18px }
.playerPanel-3 { width: 32.4% }
.playerPanel-4 { width: 24.1% }
.playerPanel-4 .role { font-size: 14px }
#playerPanelContainer .playerPanel:not(.hidden) { display: inline-block }
.playerPanel.transparent { opacity: 0.4 }
.playerPanel.transparent:hover,
.playerPanel.transparent.collapsed{ opacity: 1 }
.transparent,
.playerPanel:not(.transparent)
{ transition: opacity 0.4s }

.name, .role
{
	width: 100%;
	font-size: 12px;
	line-height: 18px;
	padding-top: 1px;
	padding-bottom: 2px;
}
.name
{
	font-family: 'Ropa Sans', sans-serif;
	line-height: 14px;
}
.role
{
	border-top: 1px solid #fff;
	border-bottom: 1px solid #fff;
}
.role *:not(.playerCard.eventCard.contingency)
{
	pointer-events: none;
	line-height: 24px;
}
.btnCollapseExpand
{
	background-color: #353535;
}
.btnCollapseExpand > .numCardsInHand
{
	font-size: 11px;
	font-family: 'Ropa Sans', sans-serif;
	padding: 1px 0;
}
.btnCollapseExpand > div
{
	font-family: 'Times New Roman', Times, serif;
	font-size: 18px;
	line-height: 9px;
	
	transform: rotate(-90deg);
	-webkit-transform: rotate(-90deg); /* Safari */
	-moz-transform: rotate(-90deg); /* Firefox */
	-ms-transform: rotate(-90deg); /* IE */
	-o-transform: rotate(-90deg); /* Opera */
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3); /* Internet Explorer */
}
.btnCollapseExpand > *
{
	pointer-events: none;
}
.btnCollapseExpand:hover
{
	background-color: #444;
	cursor: pointer;
}
.playerCard,
.epidemicFull > h2,
.eventCardFull > h3
{ font-family: 'Audiowide', 'Electrolize', sans-serif; }
.playerCard
{
	width: 98%;
	text-align: center;
	white-space: nowrap;
	margin: 2px 1%;
	border: none;
	border-top-left-radius: 5px;
	border-bottom-right-radius: 5px;
	font-size: 10px;
	overflow: hidden;
}
.playerCard:not(.b):not(.eventCard):not(.epidemic):not(.template):not(.notLocatable),
.infectionCard:not(.template),
.playerPanel .role.locatable *:not(.eventCard),
#roleIndicator,
.roleTag
{ cursor: url("images/target_black.png"), auto }
.playerCard.b:not(.notLocatable),
.eventDetails .locatable { cursor: url("images/target_white.png"), auto }
.playerCard:not(.b):not(.eventCard):not(.epidemic):not(.template):not(.notLocatable):hover,
.infectionCard:not(.template):hover .cityName,
.playerPanel .role.locatable *:not(.eventCard):hover,
#roleIndicator:hover,
.roleTag:not(.playerOption):hover,
.playerCard.b:not(.notLocatable):hover,
.eventDetails .locatable:hover
{ text-decoration: underline; }
.playerCard * { pointer-events: none }
.playerPanel > .playerCard:first-of-type { margin-top: 4px }
.playerPanel .playerCard.eventCard:not(.unavailable) { cursor: pointer }
#cardDrawContainer .button,
#infectCitiesContainer .button
{
	margin-bottom: 5px;
}
#cardDrawContainer .playerCard
{
	width: 98%;
	height: 30px;
	line-height: 30px;
	font-size: 20px;
	font-weight: 700;
	overflow: hidden;
}
#cardDrawContainer .playerCard,
.epidemicFull
{
	margin: 20px 1%;
	border-top-left-radius: 10px;
	border-bottom-right-radius: 10px;
}
#cardDrawContainer > h2
{
	font-family: 'Oswald', 'Electrolize', sans-serif;
	font-size: 28px;
	text-align: center;
}
.discardPrompt { padding: 5px 5% }
.cardsToKeep .instructions
{
	font-size: 12px;
	margin: -2px 0 3px 0;
	padding: 0 0 3px 0;
	border-bottom: 1px solid #fff;
}
.discardPrompt p span
{
	float: right;
	padding: 0 2px;
}
.discardPrompt .playerCard,
#discardStepContainer .playerCard
{
	margin-bottom: 2px;
	cursor: pointer !important;
}
.cardsToKeep > p
.discardSelections > p
{
	margin: 0 2% 3px 2%;
}
.discardPrompt .discardSelections
{
	width: 100%;
	margin: 0;
	padding: 0;
	min-height: 30px;
}
/* ... */

